# Copyright 2023 iLogtail Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

cmake_minimum_required(VERSION 3.22)
project(input_unittest)

add_executable(input_file_unittest InputFileUnittest.cpp)
target_link_libraries(input_file_unittest unittest_base)

add_executable(input_container_stdio_unittest InputContainerStdioUnittest.cpp)
target_link_libraries(input_container_stdio_unittest unittest_base)

add_executable(input_ebpf_file_security_unittest InputEBPFFileSecurityUnittest.cpp)
target_link_libraries(input_ebpf_file_security_unittest unittest_base)

add_executable(input_ebpf_process_security_unittest InputEBPFProcessSecurityUnittest.cpp)
target_link_libraries(input_ebpf_process_security_unittest unittest_base)

add_executable(input_ebpf_network_security_unittest InputEBPFNetworkSecurityUnittest.cpp)
target_link_libraries(input_ebpf_network_security_unittest unittest_base)

add_executable(input_ebpf_file_observer_unittest InputEBPFFileObserverUnittest.cpp)
target_link_libraries(input_ebpf_file_observer_unittest unittest_base)

add_executable(input_ebpf_process_observer_unittest InputEBPFProcessObserverUnittest.cpp)
target_link_libraries(input_ebpf_process_observer_unittest unittest_base)

add_executable(input_ebpf_network_observer_unittest InputEBPFNetworkObserverUnittest.cpp)
target_link_libraries(input_ebpf_network_observer_unittest unittest_base)

include(GoogleTest)
gtest_discover_tests(input_file_unittest)
gtest_discover_tests(input_container_stdio_unittest)
gtest_discover_tests(input_ebpf_file_security_unittest)
gtest_discover_tests(input_ebpf_process_security_unittest)
gtest_discover_tests(input_ebpf_network_security_unittest)
gtest_discover_tests(input_ebpf_file_observer_unittest)
gtest_discover_tests(input_ebpf_process_observer_unittest)
gtest_discover_tests(input_ebpf_network_observer_unittest)
